<resources>
    <string name="app_name">1-C_green_red_light</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_app">Sunshine</string>
    <string name="username">username</string>
    <string name="returnHome">Return to My space</string>
    <string name="signin">sign in</string>
    <string name="signup">sign up</string>
    <string name="Greetings">Welcome user! Please sign up below:</string>
    <string name="date_time_stat">Date/Time</string>
    <string name="coordinates_start_stat">(46.520444, 6.567717)</string>
    <string name="coordinates_finish_stat">(46.520444, 6.567717)</string>
    <string name="elapsed_time_stat">00.00.00</string>
    <string name="players_list_stat">[Shakira, Britney Bitch]</string>
    <string name="winner_stat">the king</string>
    <string name="time_title">"Best time: "</string>
    <string name="start_title">"Start coordinates: "</string>
    <string name="finish_title">"Finish coordinates: "</string>
    <string name="winner_title">"Winner: "</string>
    <string name="players_title">"Players: "</string>
    <string name="current_username">Current username</string>
    <string name="friend_username">Friend username</string>
    <string name="friends_button">My Friends</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
    <string name="change_frequency">Change frequency</string>
    <string name="timeAnnouncement">"With a time of: "</string>
</resources>