<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="24sp"
                    android:text="Welcome user! Please sign up below:"
                    android:gravity="center" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"/>

        <LinearLayout
            android:id="@+id/EditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:hint="@string/username"
                android:gravity="center"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="24sp"
                android:hint="@string/password"
                android:gravity="center"
                android:inputType="textPassword" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/ConfirmPickImageButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/SignIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/signin" />

            <Button
                android:id="@+id/SignUp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>
</layout>